--- a/public/CONTACTUS/contactus.css
+++ b/public/CONTACTUS/contactus.css
@@ -31,7 +31,7 @@ header .logo img {
     width: 100px;
     border-radius: 50%;
     margin-top: 2%;
-    margin-left: 15%;
+    margin-left: 1%;
 }
 
 header nav {
@@ -51,7 +51,6 @@ header nav a {
     margin: 0 13px;
     font-size: 1rem;
     transition: color 0.3s ease;
-
 }
 
 header nav a::after {
@@ -64,7 +63,8 @@ header nav a::after {
     background: white;
     transition: width 0.3s ease;
 }
- 
+
+/* Hover */
 header nav a:hover {
     color: #00bcd4;
 }
@@ -72,6 +72,16 @@ header nav a:hover {
 header nav a:hover::after {
     width: 100%;
 }
+
+/* Active */
+header nav a.active {
+    color: #00bcd4;
+}
+
+header nav a.active::after {
+    width: 100%;
+}
+
 .about {
     text-align: center;
     padding: 50px 20px;
